--- a/Console/Registro Counter Strike/Registro Counter Strike.csproj
+++ b/Console/Registro Counter Strike/Registro Counter Strike.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>Registro_Counter_Strike</RootNamespace>
   </PropertyGroup>
 
 </Project>
